--- a/index.html
+++ b/index.html
@@ -11,47 +11,61 @@
 <body>
     <h1>PARROT CARD GAME</h1>
     <main id="jogo">
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente "><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso "></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
-        <div class="carta-virada">
-            <img src="img/front.png" alt="papagaio">
+        <div class="carta" onclick="clicarCarta(this)">
+            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
+            <div class="verso"></div>
         </div>
     </main>
     <script src="js/script.js"></script>
