--- a/index.html
+++ b/index.html
@@ -11,61 +11,61 @@
 <body>
     <h1>PARROT CARD GAME</h1>
     <main id="jogo">
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta1" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta1.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta1" class="carta" onclick="virarCarta(this);">
             <div class="frente "><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso "></div>
+            <div class="verso "><img src="img/carta1.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta2" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta2.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta2" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta2.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta3" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta3.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta3" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta3.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta4" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta4.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta4" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta4.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta5" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta5.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta5" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta5.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta6" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta6.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta6" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta6.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta7" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta7.gif" alt=""></div>
         </div>
-        <div class="carta" onclick="clicarCarta(this)">
+        <div id="carta7" class="carta" onclick="virarCarta(this);">
             <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"></div>
+            <div class="verso"><img src="img/carta7.gif" alt=""></div>
         </div>
     </main>
     <script src="js/script.js"></script>
