--- a/index.html
+++ b/index.html
@@ -10,64 +10,80 @@
 </head>
 <body>
     <h1>PARROT CARD GAME</h1>
+    <div class="timer">0</div>
     <main id="jogo">
-        <div id="carta1" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta1.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta1" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta1.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta1" class="carta" onclick="virarCarta(this);">
-            <div class="frente "><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso "><img src="img/carta1.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta1" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente "><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso "><img src="img/carta1.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta2" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta2.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta2" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta2.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta2" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta2.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta2" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta2.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta3" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta3.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta3" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta3.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta3" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta3.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta3" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta3.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta4" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta4.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta4" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta4.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta4" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta4.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta4" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta4.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta5" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta5.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta5" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta5.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta5" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta5.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta5" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta5.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta6" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta6.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta6" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta6.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta6" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta6.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta6" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta6.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta7" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta7.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta7" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta7.gif" data-identifier="back-face" alt=""></div>
         </div>
-        <div id="carta7" class="carta" onclick="virarCarta(this);">
-            <div class="frente"><img src="img/front.png" alt="papagaio"></div>
-            <div class="verso"><img src="img/carta7.gif" alt=""></div>
+        <!-- Carta -->
+        <div id="carta7" class="carta" data-identifier="card" onclick="virarCarta(this);">
+            <div class="frente"><img src="img/front.png" data-identifier="front-face" alt="papagaio"></div>
+            <div class="verso"><img src="img/carta7.gif" data-identifier="back-face" alt=""></div>
         </div>
     </main>
     <script src="js/script.js"></script>
+    <script src="js/timer.js"></script>
 </body>
 </html>
